--- a/app/src/main/res/layout/risultati.xml
+++ b/app/src/main/res/layout/risultati.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-
+
+
     <LinearLayout
         android:id="@+id/rl"
         android:layout_width="match_parent"
@@ -13,21 +14,22 @@
             android:id="@+id/buttonaggiorna"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Aggiorna" />
+            android:text="@string/aggiorna" />
 
         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_gravity="center_vertical"
             android:text="@string/giornata"
             android:textSize="24sp" />
 
         <Spinner
             android:id="@+id/spinner1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"/>
     </LinearLayout>
 
     <LinearLayout
