--- a/app/src/main/res/drawable/tile.xml
+++ b/app/src/main/res/drawable/tile.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="@color/maincolor" />
+    <solid android:color="?attr/colorPrimary" />
 
     <padding
         android:bottom="1dp"
