--- a/app/src/main/res/layout/chartrow.xml
+++ b/app/src/main/res/layout/chartrow.xml
@@ -36,8 +36,7 @@
         android:scrollHorizontally="true"
         android:singleLine="true"
         android:text="TextView"
-        android:textColor="#ffffffff"
-        android:textSize="16dip"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
     <TextView
@@ -48,7 +47,7 @@
         android:layout_alignParentRight="true"
         android:paddingRight="10dp"
         android:text="TextView"
-        android:textSize="18dip"
+        android:textSize="18sp"
         android:textStyle="bold" />
     
 
