--- a/app/src/main/res/layout/infosquadra.xml
+++ b/app/src/main/res/layout/infosquadra.xml
@@ -13,15 +13,17 @@
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/app_name"/>
 
         <TextView
             android:id="@+id/nomeSquadra"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="29dp"
-            android:text="TextView"
-            android:textSize="20dp" />
+            android:layout_marginStart="29dp"
+            android:text="@string/app_name"
+            style="@style/TextAppearance.AppCompat.Title" />
     </LinearLayout>
 
     <com.arandroid.risultatilive.ui.ScrollingTextView
@@ -36,8 +38,9 @@
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
         android:scrollHorizontally="true"
-        android:singleLine="true"
-        android:text="TextView" />
+        android:maxLines="1"
+        android:text="@string/app_name"
+        style="@style/TextAppearance.AppCompat.Medium"/>
 
     <TextView
         android:id="@+id/textView1"
@@ -46,8 +49,10 @@
         android:layout_above="@+id/valueLastMatch"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="2dp"
-        android:text="Ultima Partita" />
-
+        android:text="@string/ultima_partita"
+        style="@style/TextAppearance.AppCompat.Medium"/>
+
+
     <RelativeLayout
         android:id="@+id/table"
         android:layout_width="match_parent"
@@ -60,6 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true" >
 
             <TextView
@@ -67,35 +73,40 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
-                android:text="Posizione" />
+                android:layout_marginStart="16dp"
+                android:text="@string/posizione" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
-                android:text="Incontri" />
+                android:layout_marginStart="16dp"
+                android:text="@string/incontri" />
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
-                android:text="Vittorie" />
+                android:layout_marginStart="16dp"
+                android:text="@string/vittorie" />
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
-                android:text="Pareggi" />
+                android:layout_marginStart="16dp"
+                android:text="@string/pareggi" />
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
-                android:text="Sconfitte" />
+                android:layout_marginStart="16dp"
+                android:text="@string/sconfitte" />
         </TableLayout>
 
         <TableLayout
@@ -105,42 +116,49 @@
             android:layout_alignBaseline="@+id/tableLayout2"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="16dp">
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp">
 
             <TextView
                 android:id="@+id/valuePos"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
-                android:text="Posizione" />
+                android:layout_marginStart="16dp"
+                android:text="@string/posizione" />
 
             <TextView
                 android:id="@+id/valueInc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
-                android:text="Incontri" />
+                android:layout_marginStart="16dp"
+                android:text="@string/incontri" />
 
             <TextView
                 android:id="@+id/valueWin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
-                android:text="Vittorie" />
+                android:layout_marginStart="16dp"
+                android:text="@string/vittorie" />
 
             <TextView
                 android:id="@+id/ValueTied"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
-                android:text="Pareggi" />
+                android:layout_marginStart="16dp"
+                android:text="@string/pareggi" />
 
             <TextView
                 android:id="@+id/valueLost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
-                android:text="Sconfitte" />
+                android:layout_marginStart="16dp"
+                android:text="@string/sconfitte" />
         </TableLayout>
     </RelativeLayout>
 
