--- a/app/src/main/res/layout/list_item_entry.xml
+++ b/app/src/main/res/layout/list_item_entry.xml
@@ -5,28 +5,25 @@
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:gravity="center_vertical"
-    android:paddingRight="?android:attr/scrollbarSize">
-    
-<!--     <ImageView -->
-<!--         android:id="@+id/list_item_entry_drawable" -->
-<!--         android:layout_width="wrap_content" -->
-<!--         android:layout_height="fill_parent" -->
-<!--         android:src="@android:drawable/ic_menu_preferences" -->
-<!--         android:paddingLeft="9dp"/> -->
-    
+    android:paddingRight="?android:attr/scrollbarSize"
+    android:paddingLeft="?android:attr/scrollbarSize"
+    android:baselineAligned="false">
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="6dip"
-        android:layout_marginTop="6dip"
-        android:layout_marginBottom="6dip"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
         android:layout_weight="1">
     
         <TextView android:id="@+id/list_item_entry_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:singleLine="true"
+            android:maxLines="1"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:ellipsize="marquee"
             android:textColor="@android:color/black"
@@ -37,8 +34,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/list_item_entry_title"
             android:layout_alignLeft="@id/list_item_entry_title"
+            android:layout_alignStart="@+id/list_item_entry_title"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:singleLine="true"
+            android:maxLines="1"
             android:textColor="@android:color/black" />
 
     </RelativeLayout>
