--- a/app/src/main/res/layout/prima.xml
+++ b/app/src/main/res/layout/prima.xml
@@ -2,22 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white" >
+    android:layout_height="match_parent">
 
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:scrollbars="none"
-         >
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="45dp" >
+            android:layout_marginBottom="45dp"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/LinearLayout1"
@@ -25,20 +23,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
                 android:layout_marginTop="1dp"
-                android:gravity="center" >
+                android:gravity="center">
 
                 <LinearLayout
                     android:id="@+id/eccellenzaView"
                     style="@style/linear_style"
                     android:layout_width="wrap_content"
-                    android:layout_marginRight="8dp"
                     android:layout_marginEnd="8dp"
-                    android:orientation="vertical" >
+                    android:layout_marginRight="8dp"
+                    android:orientation="vertical">
 
                     <ImageView
-                        android:src="@drawable/lnd"
+                        style="@style/image_style"
                         android:contentDescription="@string/app_name"
-                        style="@style/image_style" />
+                        android:src="@drawable/lnd" />
 
                     <TextView
                         android:id="@+id/textView1"
@@ -50,56 +48,8 @@
 
                 <LinearLayout
                     android:id="@+id/primaView"
-                    android:orientation="vertical" 
-                    style="@style/linear_style" >
-
-                    <ImageView
-                        android:src="@drawable/lnd"
-                        android:contentDescription="@string/app_name"
-                        style="@style/image_style"
-                         />
-
-                    <TextView
-                        android:id="@+id/textView2"
-                        style="@style/font_main"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/prima_categoria" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/LinearLayout2"
-                android:layout_marginBottom="1dp"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <LinearLayout
-                    android:id="@+id/serieDView"
                     style="@style/linear_style"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:orientation="vertical" >
-
-                    <ImageView
-                        style="@style/image_style"
-                        android:contentDescription="@string/app_name"
-                        android:src="@drawable/serie_d" />
-
-                    <TextView
-                        android:id="@+id/textView3"
-                        style="@style/font_main"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/serie_d" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/secondaView"
-                    style="@style/linear_style"
-                    android:orientation="vertical" >
+                    android:orientation="vertical">
 
                     <ImageView
                         style="@style/image_style"
@@ -107,10 +57,82 @@
                         android:src="@drawable/lnd" />
 
                     <TextView
+                        android:id="@+id/textView2"
+                        style="@style/font_main"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/promozione_calabrese" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/LinearLayout2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="1dp"
+                android:layout_marginTop="10dp"
+                android:gravity="center">
+
+                <LinearLayout
+                    android:id="@+id/serieDView"
+                    style="@style/linear_style_disabled"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    android:clickable="false"
+                    android:orientation="vertical">
+
+                    <FrameLayout style="@style/image_style">
+
+                        <ImageView
+                            style="@style/image_style"
+                            android:alpha="0.3"
+                            android:clickable="false"
+                            android:contentDescription="@string/app_name"
+                            android:src="@drawable/serie_d" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="@string/non_disponibile"
+                            style="@style/diagonal_text"/>
+                    </FrameLayout>
+
+
+                    <TextView
+                        android:id="@+id/textView3"
+                        style="@style/font_main"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:alpha="0.3"
+                        android:text="@string/serie_d" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/secondaView"
+                    style="@style/linear_style_disabled"
+                    android:clickable="false"
+                    android:orientation="vertical">
+
+                    <FrameLayout style="@style/image_style">
+
+                        <ImageView
+                            style="@style/image_style"
+                            android:alpha="0.3"
+                            android:clickable="false"
+                            android:contentDescription="@string/app_name"
+                            android:src="@drawable/lnd" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="@string/non_disponibile"
+                            style="@style/diagonal_text"/>
+                    </FrameLayout>
+
+                    <TextView
                         android:id="@+id/textView4"
                         style="@style/font_main"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:alpha="0.3"
                         android:text="@string/seconda_categoria" />
                 </LinearLayout>
             </LinearLayout>
@@ -123,7 +145,7 @@
                 android:layout_marginTop="10dp"
                 android:background="@drawable/my_tile"
                 android:gravity="center"
-                android:weightSum="4" >
+                android:weightSum="4">
 
                 <ImageView
                     android:layout_width="0dip"
@@ -148,7 +170,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical" >
-    </LinearLayout>
+        android:orientation="vertical"/>
 
 </RelativeLayout>
