Aggiornamenti vari L'app non funziona perché non c'è il sito

--- a/app/src/main/res/layout/aboutcomplete.xml
+++ b/app/src/main/res/layout/aboutcomplete.xml
@@ -4,13 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <ListView
         android:id="@+id/lvab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:cacheColorHint="#00000000" >
-    </ListView>
+        android:cacheColorHint="#00000000" />
 
 </RelativeLayout>
