--- a/app/src/main/res/layout/activity_prima.xml
+++ b/app/src/main/res/layout/activity_prima.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="com.arandroid.risultatilive.PrimaActivity">
 
-    <include layout="@layout/prima" />
+    <include layout="@layout/content_prima" />
 
 </android.support.design.widget.CoordinatorLayout>
