--- a/app/src/main/res/layout/chartrow.xml
+++ b/app/src/main/res/layout/chartrow.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal">
 
     <LinearLayout
         android:id="@+id/linearLayout1"
@@ -16,7 +17,7 @@
         android:id="@+id/textViewDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        tools:text="TextView"
         android:paddingTop="5dp"
         android:textSize="12dip"
         android:textStyle="bold" />
@@ -28,14 +29,16 @@
         android:layout_below="@+id/textViewDate"
         android:layout_gravity="bottom"
         android:layout_marginRight="3dp"
+        android:layout_marginEnd="3dp"
         android:layout_toLeftOf="@+id/textView1"
+        android:layout_toStartOf="@id/textView1"
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
         android:paddingBottom="15dip"
         android:paddingTop="10dip"
         android:scrollHorizontally="true"
         android:singleLine="true"
-        android:text="TextView"
+        tools:text="TextView"
         android:textSize="16sp"
         android:textStyle="bold" />
 
@@ -45,8 +48,10 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/LibroText"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:paddingRight="10dp"
-        android:text="TextView"
+        android:paddingEnd="10dp"
+        tools:text="TextView"
         android:textSize="18sp"
         android:textStyle="bold" />
     
