--- a/app/src/main/res/layout/classifica.xml
+++ b/app/src/main/res/layout/classifica.xml
@@ -26,16 +26,14 @@
             android:layout_alignBaseline="@+id/buttonaggiorna"
             android:layout_alignBottom="@+id/buttonaggiorna"
             android:layout_centerInParent="true"
-            android:layout_toRightOf="@+id/buttonaggiorna"
             android:layout_toEndOf="@+id/buttonaggiorna"
-             />
+            android:layout_toRightOf="@+id/buttonaggiorna" />
 
     </RelativeLayout>
 
     <ListView
         android:id="@+id/ListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </ListView>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
