--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -10,19 +10,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:text="Inviaci la tua segnalazione o i tuoi suggerimenti! "
-        android:textSize="15dp" />
+        android:textSize="15sp" />
 
     <EditText
         android:id="@+id/et"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="110dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
         android:layout_below="@+id/textView1"
         android:hint="La tua segnalazione qui"
         android:layout_marginTop="18dp"
+        android:inputType="text"
         android:ems="10" >
 
         <requestFocus />
