--- a/app/src/main/res/layout/infosquadra.xml
+++ b/app/src/main/res/layout/infosquadra.xml
@@ -1,7 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/header"
@@ -38,7 +37,7 @@
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
         android:scrollHorizontally="true"
-        android:maxLines="1"
+        android:singleLine="true"
         android:text="@string/app_name"
         style="@style/TextAppearance.AppCompat.Medium"/>
 
