--- a/app/src/main/res/layout/list_item_entry.xml
+++ b/app/src/main/res/layout/list_item_entry.xml
@@ -1,44 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-  
-  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?android:attr/listPreferredItemHeight"
+    android:baselineAligned="false"
     android:gravity="center_vertical"
-    android:paddingRight="?android:attr/scrollbarSize"
+    android:minHeight="?android:attr/listPreferredItemHeight"
     android:paddingLeft="?android:attr/scrollbarSize"
-    android:baselineAligned="false">
+    android:paddingRight="?android:attr/scrollbarSize">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginRight="6dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginTop="6dp"
         android:layout_marginBottom="6dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="6dp"
         android:layout_weight="1">
-    
-        <TextView android:id="@+id/list_item_entry_title"
+
+        <TextView
+            android:id="@+id/list_item_entry_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:textAppearance="?android:attr/textAppearanceLarge"
             android:ellipsize="marquee"
-            android:textColor="@android:color/black"
-            android:fadingEdge="horizontal" />
-            
-        <TextView android:id="@+id/list_item_entry_summary"
+            android:fadingEdge="horizontal"
+            android:singleLine="true"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@android:color/black" />
+
+        <TextView
+            android:id="@+id/list_item_entry_summary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/list_item_entry_title"
             android:layout_alignLeft="@id/list_item_entry_title"
             android:layout_alignStart="@+id/list_item_entry_title"
-            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:layout_below="@id/list_item_entry_title"
             android:maxLines="1"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@android:color/black" />
 
     </RelativeLayout>
-    
+
 </LinearLayout>
