--- a/app/src/main/res/layout/notizia.xml
+++ b/app/src/main/res/layout/notizia.xml
@@ -2,13 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="60dip"
-    android:padding="5dip" >
-
+    android:padding="5dip">
+
     <ImageView
         android:id="@+id/notiziaImage"
         android:layout_width="40dp"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/app_name" >
+        android:contentDescription="@string/app_name">
 
     </ImageView>
 
@@ -17,19 +17,22 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="14dp"
         android:layout_gravity="bottom"
+        android:layout_marginLeft="14dp"
+        android:layout_marginStart="1dp"
+        android:layout_toLeftOf="@+id/notiziaAuthor"
+        android:layout_toStartOf="@id/notiziaAuthor"
+        android:layout_toRightOf="@+id/notiziaImage"
+        android:layout_toEndOf="@+id/notiziaImage"
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
+        android:padding="5dip"
         android:paddingBottom="15dip"
         android:paddingTop="15dip"
         android:scrollHorizontally="true"
         android:singleLine="true"
-        android:layout_toLeftOf="@+id/notiziaAuthor"
-        android:layout_toRightOf="@+id/notiziaImage"
-        android:padding="5dip"
         android:text="@string/app_name"
-        android:textSize="15dp" />
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/notiziaAuthor"
@@ -38,8 +41,10 @@
         android:layout_alignBaseline="@+id/notiziaTitle"
         android:layout_alignBottom="@+id/notiziaTitle"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginRight="13dp"
+        android:layout_marginEnd="13dp"
         android:text="@string/app_name"
-        android:textSize="15dp" />
+        android:textSize="15sp" />
 
 </RelativeLayout>
